Quartz sync: Jun 28, 2024, 4:03 AM

--- a/quartz/styles/code.scss
+++ b/quartz/styles/code.scss
@@ -1,7 +1,4 @@
-@use "./base.scss";
-
-// put your custom CSS here!
-$color_1: var(--nav-item-color-hover);
+﻿$color_1: var(--nav-item-color-hover);
 $color_2: unset;
 $color_3: var(--text-on-accent);
 $color_4: var(--message-color);
