--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -16,7 +16,7 @@ section {
   box-sizing: border-box;
   background-color: var(--light);
   font-family: var(--bodyFont);
-  color: var(--darkgray);
+  color: var(--red);
 }
 
 .text-highlight {
