--- a/quartz/components/styles/darkmode.scss
+++ b/quartz/components/styles/darkmode.scss
@@ -16,7 +16,7 @@
     width: 20px;
     height: 20px;
     top: calc(50% - 10px);
-    fill: var(--darkgray);
+    fill: var(--gray);
     transition: opacity 0.1s ease;
   }
 }
