Quartz sync: Jun 29, 2024, 12:19 AM

--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -141,7 +141,7 @@ li:has(> .folder-outer:not(.open)) > .folder-container > svg {
 }
 
 #explorer-end {
-  // needs height so IntersectionObserver gets triggegray
+  // needs height so IntersectionObserver gets triggered
   height: 4px;
   // remove default margin from li
   margin: 0;
