--- a/quartz/components/styles/search.scss
+++ b/quartz/components/styles/search.scss
@@ -30,7 +30,7 @@
       margin: 0 0.5rem;
 
       .search-path {
-        stroke: var(--gray);
+        stroke: var(--darkgray);
         stroke-width: 2px;
         transition: stroke 0.5s ease;
       }
